--- a/is322-final-project/package.json
+++ b/is322-final-project/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "axios-progress-bar": "^1.2.0",
     "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "react": "^16.13.0",
