--- a/is322-final-project/package.json
+++ b/is322-final-project/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.46",
+    "@material-ui/styles": "^4.9.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -21,6 +22,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-slideshow-image": "^1.4.0",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.5",
     "styled-components": "^5.0.1"
   },
