--- a/is322-final-project/package.json
+++ b/is322-final-project/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "axios-progress-bar": "^1.2.0",
     "material-ui": "^0.20.2",
+    "material-ui-search-bar": "^1.0.0-beta.14",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
